--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <html>
- <title>Page not found · nsl.cs.usc.edu</title>
+ <title>Page not found · rtpslot.ezproxy.csp.edu</title>
 <head>
 <style type=text/css>
 @import url('https://fonts.googleapis.com/css?family=Audiowide&display=swap');
@@ -210,6 +210,6 @@ div{
   </defs>
 </svg>
 
-<h2>Back To <a href="https://nsl.cs.usc.edu/">Homepage</a></h2>
+<h2>Back To <a href="https://rtpslot.ezproxy.csp.edu/">Homepage</a></h2>
 </body>
 </html>
